@@ -1,3 +1,4 @@
+	* always use SO_REUSEADDR and deprecate the flag to turn it on
 	* add python bindings for SSL support
 	* minor uTP tweaks
 	* fix end-game mode issue when some files are selected to not be downloaded
